--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 
 env:
   global:
-  - REPO_DIR=Shapely
+  - REPO_DIR="Shapely"
   - BUILD_COMMIT=1.7a1
   - PLAT=x86_64
   - UNICODE_WIDTH=32
@@ -34,12 +34,12 @@ matrix:
     - MB_PYTHON_VERSION=2.7
     - NP_BUILD_DEP=numpy==1.10.4
     - NP_TEST_DEP=numpy==1.11.3
-#  - name: "Python 3.4 x86_64 linux"
-#    os: linux
-#    env:
-#    - MB_PYTHON_VERSION=3.4
-#    - NP_BUILD_DEP=numpy==1.10.4
-#    - NP_TEST_DEP=numpy==1.11.3
+  - name: "Python 3.4 x86_64 linux"
+    os: linux
+    env:
+    - MB_PYTHON_VERSION=3.4
+    - NP_BUILD_DEP=numpy==1.10.4
+    - NP_TEST_DEP=numpy==1.11.3
   - name: "Python 3.5 x86_64 linux"
     os: linux
     env:
@@ -97,7 +97,7 @@ matrix:
 before_install:
     - python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
     - BUILD_DEPENDS="$NP_BUILD_DEP cython==0.28.3"
-    - TEST_DEPENDS="$NP_TEST_DEP pytest boto3 packaging hypothesis $GEN_DEPS"
+    - TEST_DEPENDS="$NP_TEST_DEP pytest $GEN_DEPS"
     - source multibuild/common_utils.sh
     - source multibuild/travis_steps.sh
     - before_install
@@ -105,8 +105,6 @@ before_install:
 install:
     - clean_code $REPO_DIR $BUILD_COMMIT
     - build_wheel $REPO_DIR $PLAT
-    - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
-    - unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
 
 script:
     - install_run $PLAT
