--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 env:
   global:
   - REPO_DIR="Shapely"
-  - BUILD_COMMIT=1.7a3
+  - BUILD_COMMIT=10d6ea9
   - PLAT=x86_64
   - UNICODE_WIDTH=32
   - USE_CCACHE=1
