--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python: 3.5
-sudo: required
 dist: trusty
 services: docker
 filter_secrets: false
+os: linux
 
 cache:
   directories:
@@ -13,7 +13,7 @@ cache:
 env:
   global:
   - REPO_DIR="Shapely"
-  - BUILD_COMMIT=4ab9844
+  - BUILD_COMMIT=1.7.1
   - PLAT=x86_64
   - UNICODE_WIDTH=32
   - USE_CCACHE=1
@@ -23,10 +23,7 @@ addons:
     paths:
     - $(ls wheelhouse/*.whl)
 
-matrix:
-  exclude:
-  - python: 3.5
-
+jobs:
   include:
   - name: "Python 2.7 x86_64 linux"
     os: linux
@@ -58,13 +55,6 @@ matrix:
     - MB_PYTHON_VERSION=3.8
     - NP_BUILD_DEP=numpy==1.17.3
     - NP_TEST_DEP=numpy==1.17.3
-  - name: "Python 2.7 osx"
-    os: osx
-    language: generic
-    env:
-    - MB_PYTHON_VERSION=2.7
-    - NP_BUILD_DEP=numpy==1.10.4
-    - NP_TEST_DEP=numpy==1.11.3
   - name: "Python 3.5 osx"
     os: osx
     language: generic
@@ -106,6 +96,8 @@ before_install:
 install:
     - clean_code $REPO_DIR $BUILD_COMMIT
     - build_wheel $REPO_DIR $PLAT
+    - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
+    - unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
 
 script:
     - install_run $PLAT
