--- a/appveyor.yml
+++ b/appveyor.yml
@@ -102,5 +102,5 @@ cache:
   - C:\projects\deps -> %APPVEYOR_BUILD_FOLDER%\scripts\build_geos.cmd
 
 artifacts:
-  - path: dist\*.whl
+  - path: Shapely\dist\*.whl
     name: wheel
