Add wheel support for aarch64
Signed-off-by: odidev <odidev@puresoftware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,70 @@ addons:
 
 jobs:
   include:
+  - stage: Build and test wheel
+    name: "Python 3.6 aarch64 linux"
+    os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.6
+    - PLAT=aarch64
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+        - echo "This stage will just build AArch64 wheel"
+    workspaces:
+      create:
+        name: ws1
+        paths:
+          - wheelhouse
+    after_success:
+      - echo "This stage will not upload aarch64 wheel"
+  - name: "Python 3.7 aarch64 linux"
+    os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.7
+    - PLAT=aarch64
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+        - echo "This stage will just build AArch64 wheel"
+    workspaces:
+      create:
+        name: ws2
+        paths:
+          - wheelhouse
+    after_success:
+      - echo "This stage will not upload aarch64 wheel"
+  - name: "Python 3.8 aarch64 linux"
+    os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - PLAT=aarch64
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+        - echo "This stage will just build AArch64 wheel"
+    workspaces:
+      create:
+        name: ws3
+        paths:
+          - wheelhouse
+    after_success:
+      - echo "This stage will not upload aarch64 wheel"
   - name: "Python 2.7 x86_64 linux"
     os: linux
     env:
@@ -84,6 +148,52 @@ jobs:
     - NP_BUILD_DEP=numpy==1.17.3
     - NP_TEST_DEP=numpy==1.17.3
     - MB_PYTHON_OSX_VER=10.9
+  - stage: Test wheel
+    name: "Python 3.6 aarch64 linux"
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.6
+    - PLAT=aarch64
+    - NP_TEST_DEP=numpy>=1.19.0
+    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - USE_CCACHE=0
+    workspaces:
+      use: ws1
+    install:
+      - echo "This stage will test and upload the AArch64 wheel"
+  - name: "Python 3.7 aarch64 linux"
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.7
+    - PLAT=aarch64
+    - NP_TEST_DEP=numpy>=1.19.0
+    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - USE_CCACHE=0
+    workspaces:
+      use: ws2
+    install:
+      - echo "This stage will test and upload the AArch64 wheel"
+  - name: "Python 3.8 aarch64 linux"
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - PLAT=aarch64
+    - NP_TEST_DEP=numpy>=1.19.0
+    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - USE_CCACHE=0
+    workspaces:
+      use: ws3
+    install:
+      - echo "This stage will test and upload the AArch64 wheel"
 
 before_install:
     - python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
