--- a/.travis.yml
+++ b/.travis.yml
@@ -25,65 +25,131 @@ addons:
 
 jobs:
   include:
-  - name: "Python 2.7 x86_64 linux"
+  - stage: Build and test wheel
+    name: "Python 3.6 aarch64 linux"
     os: linux
-    env:
-    - MB_PYTHON_VERSION=2.7
-    - NP_BUILD_DEP=numpy==1.10.4
-    - NP_TEST_DEP=numpy==1.11.3
-  - name: "Python 3.5 x86_64 linux"
-    os: linux
-    env:
-    - MB_PYTHON_VERSION=3.5
-    - NP_BUILD_DEP=numpy==1.10.4
-    - NP_TEST_DEP=numpy==1.11.3
-  - name: "Python 3.6 x86_64 linux"
-    os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
     env:
     - MB_PYTHON_VERSION=3.6
-    - NP_BUILD_DEP=numpy==1.11.3
-    - NP_TEST_DEP=numpy==1.11.3
-  - name: "Python 3.7 x86_64 linux"
+    - PLAT=aarch64
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+        - echo "This stage will just build AArch64 wheel"
+    workspaces:
+      create:
+        name: ws1
+        paths:
+          - wheelhouse
+    after_success:
+      - echo "This stage will not upload aarch64 wheel"
+  - name: "Python 3.7 aarch64 linux"
     os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
     env:
     - MB_PYTHON_VERSION=3.7
-    - NP_BUILD_DEP=numpy==1.14.5
-    - NP_TEST_DEP=numpy==1.14.5
-  - name: "Python 3.8 x86_64 linux"
+    - PLAT=aarch64
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+        - echo "This stage will just build AArch64 wheel"
+    workspaces:
+      create:
+        name: ws2
+        paths:
+          - wheelhouse
+    after_success:
+      - echo "This stage will not upload aarch64 wheel"
+  - name: "Python 3.8 aarch64 linux"
     os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
     env:
     - MB_PYTHON_VERSION=3.8
-    - NP_BUILD_DEP=numpy==1.17.3
-    - NP_TEST_DEP=numpy==1.17.3
-  - name: "Python 3.5 osx"
-    os: osx
-    language: generic
-    env:
-    - MB_PYTHON_VERSION=3.5
-    - NP_BUILD_DEP=numpy==1.10.4
-    - NP_TEST_DEP=numpy==1.11.3
-  - name: "Python 3.6 osx"
-    os: osx
-    language: generic
-    env:
-    - MB_PYTHON_VERSION=3.6
-    - NP_BUILD_DEP=numpy==1.11.3
-    - NP_TEST_DEP=numpy==1.11.3
-  - name: "Python 3.7 osx"
-    os: osx
-    language: generic
-    env:
-    - MB_PYTHON_VERSION=3.7
-    - NP_BUILD_DEP=numpy==1.14.5
-    - NP_TEST_DEP=numpy==1.14.5
-  - os: osx
-    language: generic
-    osx_image: xcode10.1
-    env:
-    - MB_PYTHON_VERSION=3.8
-    - NP_BUILD_DEP=numpy==1.17.3
-    - NP_TEST_DEP=numpy==1.17.3
-    - MB_PYTHON_OSX_VER=10.9
+    - PLAT=aarch64
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+        - echo "This stage will just build AArch64 wheel"
+    workspaces:
+      create:
+        name: ws3
+        paths:
+          - wheelhouse
+    after_success:
+      - echo "This stage will not upload aarch64 wheel"
+
+#  include:
+#  - name: "Python 2.7 x86_64 linux"
+#    os: linux
+#    env:
+#    - MB_PYTHON_VERSION=2.7
+#    - NP_BUILD_DEP=numpy==1.10.4
+#    - NP_TEST_DEP=numpy==1.11.3
+#  - name: "Python 3.5 x86_64 linux"
+#    os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.5
+#    - NP_BUILD_DEP=numpy==1.10.4
+#    - NP_TEST_DEP=numpy==1.11.3
+#  - name: "Python 3.6 x86_64 linux"
+#    os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.6
+#    - NP_BUILD_DEP=numpy==1.11.3
+#    - NP_TEST_DEP=numpy==1.11.3
+#  - name: "Python 3.7 x86_64 linux"
+#    os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.7
+#    - NP_BUILD_DEP=numpy==1.14.5
+#    - NP_TEST_DEP=numpy==1.14.5
+#  - name: "Python 3.8 x86_64 linux"
+#    os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.8
+#    - NP_BUILD_DEP=numpy==1.17.3
+#    - NP_TEST_DEP=numpy==1.17.3
+#  - name: "Python 3.5 osx"
+#    os: osx
+#    language: generic
+#    env:
+#    - MB_PYTHON_VERSION=3.5
+#    - NP_BUILD_DEP=numpy==1.10.4
+#    - NP_TEST_DEP=numpy==1.11.3
+#  - name: "Python 3.6 osx"
+#    os: osx
+#    language: generic
+#    env:
+#    - MB_PYTHON_VERSION=3.6
+#    - NP_BUILD_DEP=numpy==1.11.3
+#    - NP_TEST_DEP=numpy==1.11.3
+#  - name: "Python 3.7 osx"
+#    os: osx
+#    language: generic
+#    env:
+#    - MB_PYTHON_VERSION=3.7
+#    - NP_BUILD_DEP=numpy==1.14.5
+#    - NP_TEST_DEP=numpy==1.14.5
+#  - os: osx
+#    language: generic
+#    osx_image: xcode10.1
+#    env:
+#    - MB_PYTHON_VERSION=3.8
+#    - NP_BUILD_DEP=numpy==1.17.3
+#    - NP_TEST_DEP=numpy==1.17.3
+#    - MB_PYTHON_OSX_VER=10.9
 
 before_install:
     - python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
