skip script in deploy stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,7 @@ jobs:
     after_success:
       - echo "This stage will not upload aarch64 wheel"
   - stage:
+    script: skip
     deploy:
       provider: s3
       access_key_id: $ARTIFACTS_KEY
