--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   exclude:
-  - python: 3.5
+  - env: PLAT=x86_64
   include:
   - stage: build
   - name: "Python 3.6 aarch64 linux"
@@ -86,14 +86,18 @@ jobs:
         - wheelhouse
     after_success:
       - echo "This stage will not upload aarch64 wheel"
-  - stage:
+  - stage: deploy
     script: skip
+    before_install: skip
+    install: skip
     deploy:
       provider: s3
       access_key_id: $ARTIFACTS_KEY
       secret_access_key: $ARTIFACTS_SECRET
       bucket: $ARTIFACTS_BUCKET
       local_dir: wheelhouse
+      on:
+        all_branches: true
 
 #  include:
 #  - name: "Python 2.7 x86_64 linux"
