--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: 3.5
+python: 3.6
 dist: trusty
 services: docker
 filter_secrets: false
@@ -41,20 +41,26 @@ jobs:
     os: linux
     env:
     - MB_PYTHON_VERSION=3.6
-    - NP_BUILD_DEP=numpy==1.11.3
-    - NP_TEST_DEP=numpy==1.11.3
+    - NP_BUILD_DEP=numpy==1.15.4
+    - NP_TEST_DEP=numpy==1.15.4
   - name: "Python 3.7 x86_64 linux"
     os: linux
     env:
     - MB_PYTHON_VERSION=3.7
-    - NP_BUILD_DEP=numpy==1.14.5
-    - NP_TEST_DEP=numpy==1.14.5
+    - NP_BUILD_DEP=numpy==1.15.4
+    - NP_TEST_DEP=numpy==1.15.4
   - name: "Python 3.8 x86_64 linux"
     os: linux
     env:
     - MB_PYTHON_VERSION=3.8
-    - NP_BUILD_DEP=numpy==1.17.3
-    - NP_TEST_DEP=numpy==1.17.3
+    - NP_BUILD_DEP=numpy==1.17.5
+    - NP_TEST_DEP=numpy==1.17.5
+  - name: "Python 3.9 x86_64 linux"
+    os: linux
+    env:
+    - MB_PYTHON_VERSION=3.9
+    - NP_BUILD_DEP=numpy==1.19.4
+    - NP_TEST_DEP=numpy==1.19.4
   - name: "Python 3.5 osx"
     os: osx
     language: generic
@@ -67,22 +73,32 @@ jobs:
     language: generic
     env:
     - MB_PYTHON_VERSION=3.6
-    - NP_BUILD_DEP=numpy==1.11.3
-    - NP_TEST_DEP=numpy==1.11.3
+    - NP_BUILD_DEP=numpy==1.15.4
+    - NP_TEST_DEP=numpy==1.15.4
   - name: "Python 3.7 osx"
     os: osx
     language: generic
     env:
     - MB_PYTHON_VERSION=3.7
-    - NP_BUILD_DEP=numpy==1.14.5
-    - NP_TEST_DEP=numpy==1.14.5
-  - os: osx
+    - NP_BUILD_DEP=numpy==1.15.4
+    - NP_TEST_DEP=numpy==1.15.4
+  - name: "Python 3.8 macos"
+    os: osx
     language: generic
-    osx_image: xcode10.1
+    osx_image: xcode9.3
     env:
     - MB_PYTHON_VERSION=3.8
-    - NP_BUILD_DEP=numpy==1.17.3
-    - NP_TEST_DEP=numpy==1.17.3
+    - NP_BUILD_DEP=numpy==1.17.5
+    - NP_TEST_DEP=numpy==1.17.5
+    - MB_PYTHON_OSX_VER=10.9
+  - name: "Python 3.9 macos"
+    os: osx
+    language: generic
+    osx_image: xcode9.3
+    env:
+    - MB_PYTHON_VERSION=3.9
+    - NP_BUILD_DEP=numpy==1.19.4
+    - NP_TEST_DEP=numpy==1.19.4
     - MB_PYTHON_OSX_VER=10.9
 
 before_install:
