--- a/.travis.yml
+++ b/.travis.yml
@@ -108,7 +108,7 @@ before_install:
     - before_install
 
 install:
-    - clean_code $REPO_DIR $BUILD_COMMIT
+    #- clean_code $REPO_DIR $BUILD_COMMIT
     - build_wheel $REPO_DIR $PLAT
     - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
     - unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
