--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ jobs:
     - MB_PYTHON_VERSION=3.7
     - PLAT=aarch64
     - NP_TEST_DEP=numpy>=1.19.0
-    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_aarch64
+      #- DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
     - USE_CCACHE=0
     #workspaces:
     #  use: ws2
