Test aarch64 wheels

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ cache:
 env:
   global:
   - REPO_DIR="Shapely"
-  - BUILD_COMMIT=fc3e642
+    #- BUILD_COMMIT=fc3e642
+  -  BUILD_COMMIT=1.7.1
   - PLAT=x86_64
   - UNICODE_WIDTH=32
   - USE_CCACHE=1
@@ -41,13 +42,13 @@ jobs:
     - MB_PYTHON_VERSION=3.7
     - PLAT=aarch64
     - NP_TEST_DEP=numpy>=1.19.0
-    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_aarch64
+    - DOCKER_TEST_IMAGE=quay.io/pypa/manylinux2014_aarch64
       #- DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
     - USE_CCACHE=0
-    #workspaces:
-    #  use: ws2
-    #install:
-    #  - echo "This stage will test and upload the AArch64 wheel"
+    workspaces:
+      use: ws2
+    install:
+      - echo "This stage will test and upload the AArch64 wheel"
 
  #- name: "Python 3.7 x86_64 linux"
  #   os: linux
@@ -109,7 +110,7 @@ before_install:
     - before_install
 
 install:
-    #- clean_code $REPO_DIR $BUILD_COMMIT
+    - clean_code $REPO_DIR $BUILD_COMMIT
     - build_wheel $REPO_DIR $PLAT
     - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
     - unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
