--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: 3.6
+python: 3.5
 dist: trusty
 services: docker
 filter_secrets: false
@@ -13,8 +13,7 @@ cache:
 env:
   global:
   - REPO_DIR="Shapely"
-    #- BUILD_COMMIT=fc3e642
-  -  BUILD_COMMIT=1.7.1
+  - BUILD_COMMIT=1.7.1
   - PLAT=x86_64
   - UNICODE_WIDTH=32
   - USE_CCACHE=1
@@ -26,51 +25,31 @@ addons:
 
 jobs:
   include:
-  - stage: Build and test wheel
-    name: "Python 3.6 aarch64 linux"
+  - name: "Python 3.5 x86_64 linux"
     os: linux
-    arch: arm64-graviton2
-    dist: focal
-    virt: vm
-    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.5
+    - NP_BUILD_DEP=numpy==1.10.4
+    - NP_TEST_DEP=numpy==1.11.3
+  - name: "Python 3.6 x86_64 linux"
+    os: linux
     env:
     - MB_PYTHON_VERSION=3.6
-    - PLAT=aarch64
-    - NP_BUILD_DEP=numpy>=1.19.0
-    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
-    - USE_CCACHE=0
-    script:
-        - echo "This stage will just build AArch64 wheel"
-    workspaces:
-      create:
-        name: ws1
-        paths:
-          - wheelhouse
-    after_success:
-      - echo "This stage will not upload aarch64 wheel"
-  - name: "Python 3.7 aarch64 linux"
+    - NP_BUILD_DEP=numpy==1.11.3
+    - NP_TEST_DEP=numpy==1.11.3
+  - name: "Python 3.7 x86_64 linux"
     os: linux
-    arch: arm64-graviton2
-    dist: focal
-    virt: vm
-    group: edge
     env:
     - MB_PYTHON_VERSION=3.7
-    - PLAT=aarch64
-    - NP_BUILD_DEP=numpy>=1.19.0
-    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
-    - USE_CCACHE=0
-    script:
-        - echo "This stage will just build AArch64 wheel"
-    workspaces:
-      create:
-        name: ws2
-        paths:
-          - wheelhouse
-    after_success:
-      - echo "This stage will not upload aarch64 wheel"
-  - stage: Test wheel
-    name: "Python 3.6 aarch64 linux"
+    - NP_BUILD_DEP=numpy==1.14.5
+    - NP_TEST_DEP=numpy==1.14.5
+  - name: "Python 3.8 x86_64 linux"
+    os: linux
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - NP_BUILD_DEP=numpy==1.17.3
+    - NP_TEST_DEP=numpy==1.17.3
+  - name: "Python 3.6 aarch64 linux"
     arch: arm64-graviton2
     dist: focal
     virt: vm
@@ -100,11 +79,26 @@ jobs:
       use: ws2
     install:
       - echo "This stage will test and upload the AArch64 wheel"
+  - name: "Python 3.8 aarch64 linux"
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - PLAT=aarch64
+    - NP_TEST_DEP=numpy>=1.19.0
+    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - USE_CCACHE=0
+    workspaces:
+      use: ws3
+    install:
+      - echo "This stage will test and upload the AArch64 wheel"
 
 before_install:
     - python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
-    - BUILD_DEPENDS="$NP_BUILD_DEP cython==0.29.21 wheel==0.34.2"
-    - TEST_DEPENDS="$NP_TEST_DEP attrs==19.1.0 pytest==4.0.2 mock;python_version<'3.4' boto3 packaging hypothesis==4.38.1 wheel==0.34.2 $GEN_DEPS"
+    - BUILD_DEPENDS="$NP_BUILD_DEP cython==0.29.21 wheel==0.31.1"
+    - TEST_DEPENDS="$NP_TEST_DEP attrs==19.1.0 pytest==4.0.2 mock;python_version<'3.4' boto3 packaging hypothesis==4.38.1 wheel==0.31.1 $GEN_DEPS"
     - source multibuild/common_utils.sh
     - source multibuild/travis_steps.sh
     - before_install
