--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: 3.6
-dist: trusty
+dist: focal
 services: docker
 filter_secrets: false
 os: linux
@@ -14,7 +14,7 @@ env:
   global:
   - REPO_DIR="Shapely"
     #- BUILD_COMMIT=fc3e642
-  -  BUILD_COMMIT=1.7.1
+  - BUILD_COMMIT=72e11ed
   - PLAT=x86_64
   - UNICODE_WIDTH=32
   - USE_CCACHE=1
@@ -96,55 +96,6 @@ jobs:
           - wheelhouse
     after_success:
       - echo "This stage will not upload aarch64 wheel"
-  - name: "Python 3.6 x86_64 linux"
-    os: linux
-    env:
-    - MB_PYTHON_VERSION=3.6
-    - NP_BUILD_DEP=numpy==1.11.3
-    - NP_TEST_DEP=numpy==1.11.3
-  - name: "Python 3.7 x86_64 linux"
-    os: linux
-    env:
-    - MB_PYTHON_VERSION=3.7
-    - NP_BUILD_DEP=numpy==1.14.5
-    - NP_TEST_DEP=numpy==1.14.5
-  - name: "Python 3.8 x86_64 linux"
-    os: linux
-    env:
-    - MB_PYTHON_VERSION=3.8
-    - NP_BUILD_DEP=numpy==1.17.3
-    - NP_TEST_DEP=numpy==1.17.3
-  - stage: Test wheel
-    name: "Python 3.6 aarch64 linux"
-    arch: arm64-graviton2
-    dist: focal
-    virt: vm
-    group: edge
-    env:
-    - MB_PYTHON_VERSION=3.6
-    - PLAT=aarch64
-    - NP_TEST_DEP=numpy>=1.19.0
-    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
-    - USE_CCACHE=0
-    workspaces:
-      use: ws1
-    install:
-      - echo "This stage will test and upload the AArch64 wheel"
-  - name: "Python 3.7 aarch64 linux"
-    arch: arm64-graviton2
-    dist: focal
-    virt: vm
-    group: edge
-    env:
-    - MB_PYTHON_VERSION=3.7
-    - PLAT=aarch64
-    - NP_TEST_DEP=numpy>=1.19.0
-    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
-    - USE_CCACHE=0
-    workspaces:
-      use: ws2
-    install:
-      - echo "This stage will test and upload the AArch64 wheel"
 
  #- name: "Python 3.7 x86_64 linux"
  #   os: linux
@@ -196,21 +147,6 @@ jobs:
  #   - NP_BUILD_DEP=numpy==1.19.4
  #   - NP_TEST_DEP=numpy==1.19.4
  #   - MB_PYTHON_OSX_VER=10.9
-  - name: "Python 3.8 aarch64 linux"
-    arch: arm64-graviton2
-    dist: focal
-    virt: vm
-    group: edge
-    env:
-    - MB_PYTHON_VERSION=3.8
-    - PLAT=aarch64
-    - NP_TEST_DEP=numpy>=1.19.0
-    - DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
-    - USE_CCACHE=0
-    workspaces:
-      use: ws3
-    install:
-      - echo "This stage will test and upload the AArch64 wheel"
 
 before_install:
     - python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
@@ -222,7 +158,8 @@ before_install:
 
 install:
     - clean_code $REPO_DIR $BUILD_COMMIT
-    - build_wheel $REPO_DIR $PLAT
+    - bash build-linux-arm64-wheels.sh
+      #- build_wheel $REPO_DIR $PLAT
     - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
     - unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
 
