--- a/.travis.yml
+++ b/.travis.yml
@@ -29,18 +29,18 @@ jobs:
   - stage: Build and test wheel
     name: "Python 3.6 aarch64 linux"
     os: linux
-    arch: arm64-graviton2
-    dist: focal
-    virt: vm
-    group: edge
+    arch: arm64
+    #dist: focal
+    #virt: vm
+    #group: edge
     env:
     - MB_PYTHON_VERSION=3.6
     - PLAT=aarch64
     - NP_BUILD_DEP=numpy>=1.19.0
     - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
     - USE_CCACHE=0
-    #script:
-    #   - echo "This stage will just build AArch64 wheel"
+    script:
+       - echo "This stage will just build AArch64 wheel"
     #workspaces:
     #  create:
     #    name: ws1
@@ -60,8 +60,8 @@ jobs:
     - NP_BUILD_DEP=numpy>=1.19.0
     - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
     - USE_CCACHE=0
-    #script:
-    #    - echo "This stage will just build AArch64 wheel"
+    script:
+       - echo "This stage will just build AArch64 wheel"
     #workspaces:
     #  create:
     #    name: ws2
@@ -76,19 +76,34 @@ jobs:
     virt: vm
     group: edge
     env:
-    - MB_PYTHON_VERSION=3.7
+    - MB_PYTHON_VERSION=3.8
     - PLAT=aarch64
-    - NP_TEST_DEP=numpy>=1.19.0
-    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_aarch64
-      #- DOCKER_TEST_IMAGE=multibuild/xenial_arm64v8
+    - NP_BUILD_DEP=numpy>=1.19.0
+    - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
+    - USE_CCACHE=0
+    script:
+       - echo "This stage will just build AArch64 wheel"
+      #workspaces:
+      #create:
+      #  name: ws3
+      #  paths:
+      #    - wheelhouse
+      # after_success:
+      #- echo "This stage will not upload aarch64 wheel"
+  - name: "Python 3.9 aarch64 linux"
+    os: linux
+    arch: arm64-graviton2
+    dist: focal
+    virt: vm
+    group: edge
     env:
     - MB_PYTHON_VERSION=3.9
     - PLAT=aarch64
     - NP_BUILD_DEP=numpy>=1.19.0
     - DOCKER_IMAGE=quay.io/pypa/manylinux2014_${PLAT}
     - USE_CCACHE=0
-      #script:
-      #  - echo "This stage will just build AArch64 wheel"
+    script:
+       - echo "This stage will just build AArch64 wheel"
       #workspaces:
       #create:
       #  name: ws3
@@ -97,24 +112,24 @@ jobs:
       # after_success:
       #- echo "This stage will not upload aarch64 wheel"
 
- #- name: "Python 3.7 x86_64 linux"
- #   os: linux
- #   env:
- #   - MB_PYTHON_VERSION=3.7
- #   - NP_BUILD_DEP=numpy==1.15.4
- #   - NP_TEST_DEP=numpy==1.15.4
- # - name: "Python 3.8 x86_64 linux"
- #   os: linux
- #   env:
- #   - MB_PYTHON_VERSION=3.8
- #   - NP_BUILD_DEP=numpy==1.17.5
- #   - NP_TEST_DEP=numpy==1.17.5
- # - name: "Python 3.9 x86_64 linux"
- #   os: linux
- #   env:
- #   - MB_PYTHON_VERSION=3.9
- #   - NP_BUILD_DEP=numpy==1.19.4
- #   - NP_TEST_DEP=numpy==1.19.4
+  - name: "Python 3.7 x86_64 linux"
+    os: linux
+    env:
+    - MB_PYTHON_VERSION=3.7
+    - NP_BUILD_DEP=numpy==1.15.4
+    - NP_TEST_DEP=numpy==1.15.4
+  - name: "Python 3.8 x86_64 linux"
+    os: linux
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - NP_BUILD_DEP=numpy==1.17.5
+    - NP_TEST_DEP=numpy==1.17.5
+  - name: "Python 3.9 x86_64 linux"
+    os: linux
+    env:
+    - MB_PYTHON_VERSION=3.9
+    - NP_BUILD_DEP=numpy==1.19.4
+    - NP_TEST_DEP=numpy==1.19.4
  # - name: "Python 3.6 osx"
  #   os: osx
  #   language: generic
@@ -159,8 +174,7 @@ before_install:
 install:
     - clean_code $REPO_DIR $BUILD_COMMIT
     - ls -lrt Shapely/
-    - bash build-linux-arm64-wheels.sh
-      #- build_wheel $REPO_DIR $PLAT
+    - if [[ $PLAT != "aarch64" ]]; then build-linux-arm64-wheels.sh else build_wheel $REPO_DIR $PLAT; fi;
     - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
       #- unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
 
