--- a/.travis.yml
+++ b/.travis.yml
@@ -174,7 +174,8 @@ before_install:
 install:
     - clean_code $REPO_DIR $BUILD_COMMIT
     - ls -lrt Shapely/
-    - if [[ $PLAT != "aarch64" ]]; then build-linux-arm64-wheels.sh else build_wheel $REPO_DIR $PLAT; fi;
+    - echo $PLAT
+    - if [[ $PLAT == "aarch64" ]]; then build-linux-arm64-wheels.sh else build_wheel $REPO_DIR $PLAT; fi;
     - ls -l ${TRAVIS_BUILD_DIR}/wheelhouse/
       #- unzip -l ${TRAVIS_BUILD_DIR}/wheelhouse/*.whl
 
